--- a/style.css
+++ b/style.css
@@ -1,41 +1,56 @@
-/* google-font */
-@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Poppins:wght@400;500;600;700&display=swap');
-
 *{
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: black;
 }
-
 header{
-    height: 500px;
-    margin-top: 3rem;
     position: relative;
+    height: 500px;
+    padding: 100px 0;
+    margin-bottom: 100px;
 }
-header h1{
+.heading{
     font-family: 'Berkshire Swash', cursive;
 }
-.soccer img{
+.header-thumbnail{
     position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.ball{
+    position: absolute;
+    bottom: 0;
     right: 0;
+}
+.player-logo{
+    position: absolute;
+    top: 110px;
+    right: 150px;
 }
 .logo{
     position: absolute;
-    top: 40px;
-    right: 300px;
-    
+    top: 85px;
+    right: 220px;
 }
-.player-ball{
-    position: absolute;
-    top: 80px;
-    right: 215px;
+.bg-custom{
+    background-color: blueviolet;
 }
-.player-img{
-    position: absolute;
-    left: 0;
-    top: 30%;
+#selected-players li{
+    font-size: 20px;
+    font-weight: 600;
 }
+.selected-five{
+    height: 250px;
+    padding: 18px 0;
+    margin-left: 20px;
+}
+.calculation-field{
+    background-color: #607d8b;
+}
+
+
+
+
 
 
 
